--- a/web/templates/files.html
+++ b/web/templates/files.html
@@ -53,11 +53,13 @@
 			</div>
 		</div>
 
-		<!-- Flash Messages -->
+		<!-- Flash Messages (shown as toast) -->
 		{{if .Flash}}
-		<div class="p-4 rounded mb-4 border-l-4 {{if eq .Flash.Type "error"}}bg-red-50 dark:bg-red-900/30 text-red-600 dark:text-red-400 border-red-600{{else if eq .Flash.Type "success"}}bg-green-50 dark:bg-green-900/30 text-green-600 dark:text-green-400 border-green-600{{else}}bg-blue-50 dark:bg-blue-900/30 text-blue-600 dark:text-blue-400 border-blue-600{{end}}">
-			{{.Flash.Content}}
-		</div>
+		<script>
+			document.addEventListener('DOMContentLoaded', function() {
+				showToast({{.Flash.Content}}, {{.Flash.Type}});
+			});
+		</script>
 		{{end}}
 
 		<!-- Breadcrumb Navigation and Actions -->
